# general_graphics_setup

./: .gitmodules  CMakeLists.txt  GraphicsWindow.cpp  GraphicsWindow.h  LICENSE  OpenGLContext.cpp  OpenGLContext.h  README.md  main.cpp
glsl/: simple.frag  simple.vert
graphics/: OGLShader.cpp  OGLShader.h  PixelSprite.cpp  PixelSprite.h  Primitive.h  ShaderProgram.cpp  ShaderProgram.h  Sprite.cpp  Sprite.h  Texture2D.cpp  Texture2D.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/patches/: sdl_image_win32_missing_stdbool_fix.patch
math/: MTypes.h
